añadir pagina de error 404

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -31,4 +31,9 @@
   <listener>
     <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
   </listener>
+  <error-page>
+    <error-code>404</error-code>
+    <location>/errorpages/404.xhtml</location>
+  </error-page>
+  
 </web-app>
